@@ -1,34 +1,0 @@
-Build.PL
-Changes
-MANIFEST			This list of files
-META.json
-META.yml
-README
-lib/Run/Parts.pm
-lib/Run/Parts/Common.pm
-lib/Run/Parts/Debian.pm
-lib/Run/Parts/Perl.pm
-t/00-load.t
-t/basic-dummy/bar
-t/basic-dummy/fnord~
-t/basic-dummy/foo
-t/basic-dummy/script
-t/basic-dummy/script2
-t/basic-dummy/script~
-t/basic-functionality.t
-t/boilerplate.t
-t/compare-functionality.t
-t/manifest.t
-t/pod-coverage.t
-t/pod.t
-t/win-dummy/bar.com
-t/win-dummy/bla.bat
-t/win-dummy/foo.exe
-t/win-dummy/pfff.scr
-t/win-dummy/puff.pif
-t/win-dummy/unix.sh
-t/win-exec-dummy/bla.bat
-t/win-exec-dummy/fnord.sh
-t/win-exec-dummy/foo.bat
-t/win-exec.t
-t/win-functionality.t
