@@ -1,0 +1,31 @@
+name = Run-Parts
+version = 0.07_01
+author = Axel Beckert <abe@deuxchevaux.org>
+license = Perl_5
+copyright_holder = Axel Beckert
+
+[@Filter]
+-bundle = @Classic
+-remove = UploadToCPAN
+-remove = PkgVersion
+-remove = PodVersion
+
+[PruneFiles]
+filename = debian
+match = ^(?!t/[^/]+/)[^/]+~$
+
+[PodWeaver]
+[PkgVersion]
+[Git::Check]
+;changelog = debian/changelog
+
+[Test::Perl::Critic]
+[MetaResources]
+homepage          = https://github.com/xtaran/run-parts
+bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Run-Parts
+bugtracker.mailto = bug-run-parts@rt.cpan.org
+repository.url    = git://github.com/xtaran/run-parts.git
+repository.web    = https://github.com/xtaran/run-parts
+repository.type   = git
+
+[AutoPrereqs]
