@@ -1,22 +1,12 @@
 package Run::Parts::Common;
 
+# ABSTRACT: Common helpers for Run::Parts and its backends
+
 use Modern::Perl;
 use Exporter::Easy ( EXPORT => [qw[lines chomped_lines]] );
 use Scalar::Util qw(blessed);
 
 =encoding utf8
-
-=head1 NAME
-
-Run::Parts::Common - Common helpers for Run::Parts and its backends
-
-=head1 VERSION
-
-Version 0.01
-
-=cut
-
-our $VERSION = '0.01';
 
 =head1 SYNOPSIS
 
@@ -64,11 +54,6 @@ sub chomped_lines {
 L<Run::Parts>
 
 
-=head1 AUTHOR
-
-Axel Beckert, C<< <abe@deuxchevaux.org> >>
-
-
 =head1 BUGS
 
 Please report any bugs or feature requests to C<bug-run-parts at
@@ -76,24 +61,6 @@ rt.cpan.org>, or through the web interface at
 L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Run-Parts>.  I will
 be notified, and then you'll automatically be notified of progress on
 your bug as I make changes.
-
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc Run::Parts::Common
-
-
-=head1 LICENSE AND COPYRIGHT
-
-Copyright 2013-2014 Axel Beckert.
-
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
-
-See L<http://dev.perl.org/licenses/> for more information.
 
 =cut
 
