@@ -1,22 +1,11 @@
 package Run::Parts::Debian;
 
+# ABSTRACT: Perl interface to Debian's run-parts tool
+
 use Modern::Perl;
 use Run::Parts::Common;
 
 =encoding utf8
-
-=head1 NAME
-
-Run::Parts::Debian - Perl interface to Debian's run-parts tool
-
-=head1 VERSION
-
-Version 0.01
-
-=cut
-
-our $VERSION = '0.01';
-
 
 =head1 SYNOPSIS
 
@@ -76,11 +65,6 @@ sub run_parts_command {
 L<Run::Parts>, L<run-parts(8)>
 
 
-=head1 AUTHOR
-
-Axel Beckert, C<< <abe@deuxchevaux.org> >>
-
-
 =head1 BUGS
 
 Please report any bugs or feature requests to C<bug-run-parts at
@@ -88,24 +72,6 @@ rt.cpan.org>, or through the web interface at
 L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Run-Parts>.  I will
 be notified, and then you'll automatically be notified of progress on
 your bug as I make changes.
-
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc Run::Parts::Debian
-
-
-=head1 LICENSE AND COPYRIGHT
-
-Copyright 2013-2014 Axel Beckert.
-
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
-
-See L<http://dev.perl.org/licenses/> for more information.
 
 =cut
 
