@@ -1,23 +1,13 @@
 package Run::Parts::Perl;
 
+# ABSTRACT: Pure Perl implementation of Debian's run-parts tool
+
 use Modern::Perl;
 use autodie;
 use Taint::Util;
 use Run::Parts::Common;
 
 =encoding utf8
-
-=head1 NAME
-
-Run::Parts::Perl - Pure Perl implementation of Debian's run-parts tool
-
-=head1 VERSION
-
-Version 0.02
-
-=cut
-
-our $VERSION = '0.02';
 
 =head1 SYNOPSIS
 
@@ -167,11 +157,6 @@ sub dosish {
 L<Run::Parts>, L<run-parts(8)>
 
 
-=head1 AUTHOR
-
-Axel Beckert, C<< <abe@deuxchevaux.org> >>
-
-
 =head1 BUGS
 
 Please report any bugs or feature requests to C<bug-run-parts at
@@ -179,24 +164,6 @@ rt.cpan.org>, or through the web interface at
 L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Run-Parts>.  I will
 be notified, and then you'll automatically be notified of progress on
 your bug as I make changes.
-
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc Run::Parts::Perl
-
-
-=head1 LICENSE AND COPYRIGHT
-
-Copyright 2013-2014 Axel Beckert.
-
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
-
-See L<http://dev.perl.org/licenses/> for more information.
 
 =cut
 
