@@ -9,6 +9,8 @@ Revision history for Run-Parts
 
         Require CPAN::Changes >= 0.23 for running the test suite.
 
+        Switch to Dist::Zilla (with ExtUtils::MakeMaker) instead of Module::Build
+
 0.06    2013-07-22 20:47:16+02:00
 
         Bump Module::Build requirement to 0.4004 for test_requires.
